# MelonLearn

./: LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml
DL/: __init__.py
DL/Layers/: Conv2D.py  Dense.py  Flatten.py  __init__.py  interface.py
DL/Optimizer/: RMSprop.py  __init__.py  adam.py  momentum.py  sgd.py
DL/loss/: Crossentropy.py  mse.py
ML/: __init__.py
ML/Reinforcement/: Qlearning.py  __init__.py
ML/Supervised/Classification/: LogisticRegression.py  NaiveBayes.py  RandomForest.py  SVM.py
ML/Supervised/Regression/: LassoRegression.py  LinearRegression.py  RegressionTree.py  SVR.py
ML/Unsupervised/: __init__.py
ML/Unsupervised/AnomalyDetection/: IQR.py  __init__.py  z-score.py
ML/Unsupervised/Clustering/: DBSCAN.py  ICA.py  __init__.py
melonlearn/DL/: Sequential.py
melonlearn/DL/Layers/: Dropout.py  Maxpool2D.py
melonlearn/DL/Optimizer/: interface.py
melonlearn/DL/loss/: __init__.py
melonlearn/ML/: __init__.py
melonlearn/ML/Reinforcement/: PolicyOptimization.py
melonlearn/ML/Supervised/: __init__.py
melonlearn/ML/Supervised/Classification/: DecisionTree.py  KNN.py  LinearSVM.py  __init__.py
melonlearn/ML/Supervised/Regression/: RandomForestRegression.py  __init__.py
melonlearn/ML/Unsupervised/AnomalyDetection/: IsolationFroest.py
melonlearn/ML/Unsupervised/Clustering/: KMeans.py  PCA.py
