[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "melonlearn"
version = "0.1.0"
description = "A machine learning library for educational and practical use."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}  # Modern PEP 639 format
authors = [
  {name = "Mohamed ElSayed", email = "mohamedelsayyed234@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"  # Removed license classifier
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0"
]

[tool.setuptools]
include-package-data = true

[project.urls]
"Homepage" = "https://github.com/mohamedelsayed0001/MelonLearn"  